feat: add Docker, CI/CD pipeline, health endpoint and production config